--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>Gifs and Stickers</h1>
+<div class="d-flex">
+  <!-- Sidebar -->
+  <shared-sidebar></shared-sidebar>
+
+  <!-- Home Page -->
+</div>
