--- a/src/app/gifs/pages/home-page/home-page.component.html
+++ b/src/app/gifs/pages/home-page/home-page.component.html
@@ -1,15 +1,9 @@
 <div class="row p-3">
-    <div class="col-12">
-        <gifs-search></gifs-search>
-    </div>
+  <div class="col-12">
+    <gifs-search></gifs-search>
+  </div>
 
-    <div class="col-12 pt-2">
-        <ul>
-            <li>One</li>
-            <li>Two</li>
-            <li>Three</li>
-            <li>Four</li>
-            <li>Five</li>
-        </ul>
-    </div>
+  <div class="col-12 pt-2">
+    <gifs-card-list></gifs-card-list>
+  </div>
 </div>
