working in the template of the card in the card-list

--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,7 +1,48 @@
-<ul>
-    <li>One</li>
-    <li>Two</li>
-    <li>Three</li>
-    <li>Four</li>
-    <li>Five</li>
-</ul>
+<div class="row">
+
+  <div class="col-md-3 col-sm-6">
+    <div class="card mb-2 text-center bg-dark">
+      <!-- TODO: Create image -->
+      <div class="card-body text-white">
+        <p class="card-text">Hello world</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-3 col-sm-6">
+    <div class="card mb-2 text-center bg-dark">
+      <!-- TODO: Create image -->
+      <div class="card-body text-white">
+        <p class="card-text">Hello world</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-3 col-sm-6">
+    <div class="card mb-2 text-center bg-dark">
+      <!-- TODO: Create image -->
+      <div class="card-body text-white">
+        <p class="card-text">Hello world</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-3 col-sm-6">
+    <div class="card mb-2 text-center bg-dark">
+      <!-- TODO: Create image -->
+      <div class="card-body text-white">
+        <p class="card-text">Hello world</p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="col-md-3 col-sm-6">
+    <div class="card mb-2 text-center bg-dark">
+      <!-- TODO: Create image -->
+      <div class="card-body text-white">
+        <p class="card-text">Hello world</p>
+      </div>
+    </div>
+  </div>
+
+</div>
