using viewchild to the the input value of the search

--- a/src/app/gifs/components/search/search.component.html
+++ b/src/app/gifs/components/search/search.component.html
@@ -1,2 +1,8 @@
 <h5>Search</h5>
-<input type="text" class="form-control" placeholder="Search...">
+<input
+  type="text"
+  class="form-control"
+  placeholder="Search..."
+  (keyup.enter)="searchTag()"
+  #txtTagInput
+/>
