--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,8 +1,13 @@
 <div class="bg-dark border-right p-3" id="sidebar">
   <h3 class="text-light">Gifs and Stickers</h3>
-  <hr class="text-white"/>
+  <hr class="text-white" />
 
   <div class="list-group list-reset">
-    <button class="list-group-item list-group-item-action">Something</button>
+    <button
+      *ngFor="let tag of tagsHistory"
+      class="list-group-item list-group-item-action"
+    >
+      {{ tag | titlecase }}
+    </button>
   </div>
 </div>
