--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,46 +1,10 @@
 <div class="row">
 
-  <div class="col-md-3 col-sm-6">
+  <div class="col-md-3 col-sm-6" *ngFor="let gif of gifs">
     <div class="card mb-2 text-center bg-dark">
-      <!-- TODO: Create image -->
+      <img [src]="gif.images.downsized.url" [alt]="gif.title">
       <div class="card-body text-white">
-        <p class="card-text">Hello world</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-md-3 col-sm-6">
-    <div class="card mb-2 text-center bg-dark">
-      <!-- TODO: Create image -->
-      <div class="card-body text-white">
-        <p class="card-text">Hello world</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-md-3 col-sm-6">
-    <div class="card mb-2 text-center bg-dark">
-      <!-- TODO: Create image -->
-      <div class="card-body text-white">
-        <p class="card-text">Hello world</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-md-3 col-sm-6">
-    <div class="card mb-2 text-center bg-dark">
-      <!-- TODO: Create image -->
-      <div class="card-body text-white">
-        <p class="card-text">Hello world</p>
-      </div>
-    </div>
-  </div>
-  
-  <div class="col-md-3 col-sm-6">
-    <div class="card mb-2 text-center bg-dark">
-      <!-- TODO: Create image -->
-      <div class="card-body text-white">
-        <p class="card-text">Hello world</p>
+        <p class="card-text">{{ gif.title }}</p>
       </div>
     </div>
   </div>
