--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-3 col-sm-6" *ngFor="let gif of gifs">
+  <div *ngFor="let gif of gifs" class="col-md-3 col-sm-6">
     <div class="card mb-2 text-center bg-dark">
       <img
         [src]="gif.images.downsized_medium.url"
