--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <gifs-card 
+  <card 
     *ngFor="let gif of gifs" 
     class="col-md-3 col-sm-6" 
     [gif]="gif"
   >
-  </gifs-card>
+  </card>
 </div>
